style.css
:root {
  --background-color: #1c1c1c;
  --font-color: #ffffff;

  --main-color: #f72585ff;
  --secondary-color: #7209b7ff;
  --ternary-color: #ef1a24ff;

  --font-size: 20pt;
  --font-size-medium: 24pt;
  --font-size-large: 36pt;
  --font-size-title: 50pt;
}

* {
  padding: 0;
  margin: 0;
  color: var(--font-color);
  box-sizing: border-box;

  font-family: "DM Sans", sans-serif;
  font-optical-sizing: auto;
  font-style: normal;
}

html {
  height: 100%;
  background-color: var(--background-color);
}

body {
  height: 100%;
  padding-top: min(20%, var(--font-size-title));
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.header {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.title {
  display: flex;
  flex-direction: row;
  align-items: baseline;
}

.title > * {
  font-size: var(--font-size-title);
  font-weight: 500;
}

.title__text {
  color: var(--main-color);
}

.title__text__accent {
  color: var(--secondary-color);
  font-weight: 800;
}

.content {
  padding: 2em 0;
}

.content > * {
  font-size: var(--font-size);
  text-align: center;
  margin-bottom: 0.5em;
}

.content__icon {
  font-size: var(--font-size-large);
}

